--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,8 @@
 name = "peak-colorado-properties"
-main = "dist/_worker.js"
-compatibility_date = "2024-09-19"
-
-[site]
-bucket = "./dist"
+pages_build_output_dir = "dist"
 
 [build]
 command = "npm run build"
 
-[env.production]
-name = "peak-colorado-properties"
-route = { pattern = "your-domain.com/*", zone_id = "" }
-
-[env.staging]
-name = "peak-colorado-properties-staging"
+[build.environment]
+NODE_VERSION = "22"
